# university-api

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: factories.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
api/management/commands/: generate_data.py
api/migrations/: 0001_initial.py  0002_auto_20211126_1309.py  0003_auto_20211126_1314.py  0004_auto_20211127_1910.py  0005_rename_groups_lesson_group.py
university/: .env  celery.py  settings.py  urls.py
